# oop-project

./: Black_Mirror.txt  CMakeLists.txt  Game_of_Thrones.txt  README.md  README.txt  The_Crown.txt  The_Office.txt  The_Sopranos.txt  The_Wire.txt  launcher.command  main.cpp  msan_ignorelist.txt  msan_suppressions.txt  tastatura.txt  tvshows.in
.github/workflows/: cmake.yml
cmake/: CopyHelper.cmake
inc/: Abstract Factory.hpp  Actor.hpp  Builder.hpp  Category.hpp  Content.hpp  Episode.hpp  Exceptions.hpp  Factory.hpp  Menu.hpp  Movie.hpp  Storage.hpp  TVShow.hpp  User.hpp  Watchlist.hpp
input_files/: Breaking_Bad.txt  Friends.txt  Sherlock.txt  Stranger_Things.txt  movies.txt  users.txt  watchlists.txt
scripts/: build_cppcheck.sh
src/: Actor.cpp  Builder.cpp  Category.cpp  Content.cpp  Episode.cpp  Menu.cpp  Movie.cpp  TVShow.cpp  User.cpp  Watchlist.cpp
